[tool.poetry]
name = "parsers"
version = "0.1.0"
description = ""
authors = ["sergeybee <fake@fake.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.25.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
selenium = "^4.15.2"
aiogram = "^3.2.0"
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
